kubernetes/web/service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: web
  namespace: bring-it
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: web
    namespace: bring-it
