kubernetes/web/ingress-tls.yaml
---
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: web
  namespace: bring-it
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
    kubernetes.io/rewrite-target: "/"
spec:
  tls:
  - hosts:
    - bring-it.thuault.com
    secretName: bring-it-tls
  rules:
  - host: bring-it.thuault.com
    http:
      paths:
      - path: /
        backend:
          serviceName: web
          servicePort: 80
